2004-07-01  MenTaLguY  <mental@rydia.net>

	* src/sp-item.cpp: fix clip path loading bug

	* src/sp-object.cpp: relax analness about object ids a little

2004-06-30  Kees Cook  <kees@outflux.net>

	* src/dialogs/desktop-properties.cpp, src/dialogs/rdf.h,
	  src/dialogs/rdf.cpp: built the various functions needed to extract
	  the RDF text elements from the DOM.  XML in the document will now
	  be displayed in the entry fields.

2004-06-28  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-action.cpp, src/xml/repr-action.h, src/xml/repr-css.cpp,
	  src/xml/repr-io.cpp, src/xml/repr-private.h, src/xml/repr-util.cpp,
	  src/xml/repr.cpp, src/xml/sp-repr-attr.h: applied peter's patch to
	  break out NRReprAttr

	* src/sp-object.cpp, src/sp-object.h:

	  added SPObject::nearestCommonAncestor, which given another SPObject
	  returns the nearest common ancestor of the two SPObjects.

	* src/sp-item.cpp, src/sp-item.h:

	  added SPItem::getRelativeTransform, which computes the SPItem's
	  transform relative to another SPObject

	* src/arc-context.cpp, src/draw-context.cpp, src/dyna-draw-context.cpp,
	  src/rect-context.cpp, src/spiral-context.cpp, src/star-context.cpp,
	  src/text-context.cpp:

	  drawing tools now cope with drawing within transformed groups
	  (i.e. layers)

2004-06-27  MenTaLguY  <mental@rydia.net>

	* src/sp-object.h: remove sp_object_request_update,
	  sp_object_invoke_update, sp_object_invoke_modified,
	  sp_object_request_modified, and sp_object_invoke_write, which have been
	  deprecated and are now completely unused

	* src/Makefile_insert, src/desktop.cpp, src/desktop.h,
	  src/object-hierarchy.cpp, src/object-hierarchy.h, src/sp-object.cpp,
	  src/sp-object.h:

	  Implemented SPDesktop::setCurrentLayer(), introducing
	  Inkscape::ObjectHierarchy to permit falling back to parents if
	  the current layer is removed.

	* src/object-ui.cpp, src/interface.cpp: really crude hack of
	  Sodipodi-like "enter group" and "leave group"
